# sphinx-kroki

./: CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yaml  release.yml
src/sphinx_kroki/: kroki.py  transform.py
tests/: test_kroki.py
tests/fixtures/test-kroki-warnings/: conf.py  index.rst
